:sparkles: Introducing new features. 增加部门负责人岗位，方便工作流审批使用